Customer  basic front end is done

--- a/system/src/main/resources/application.properties
+++ b/system/src/main/resources/application.properties
@@ -1,4 +1,15 @@
 spring.application.name=system
+#server.error.include-message=always
+#server.error.include-binding-errors=always
+spring.security.enabled=false
+spring.security.basic.enabled=false
+security.ignored=/**
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=DEBUG
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/crm_database
 spring.datasource.username=crm_user
