This commit introduces unit tests for the UserService class, using Mockito for mocking the IUserRepository dependency and JUnit for the test framework.
- Added tests to cover the basic functionalities of the UserService, including user retrieval, saving, and deletion operations.
- Used Mockito to simulate the behavior of the IUserRepository, allowing for isolated testing of UserService methods without database interaction.
- The tests check for correct values being returned from the service methods and verify that repository methods are called as expected.
- JUnit was used as the testing framework to ensure reliable test execution.

This commit helps ensure that the UserService class behaves correctly and can handle various scenarios.

--- a/system/pom.xml
+++ b/system/pom.xml
@@ -7,8 +7,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.1</version> <!-- Stabil versiyon, milestone yerine bu versiyona geçiyoruz -->
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.3.1</version>
+		<relativePath/>
 	</parent>
 
 	<groupId>com.crm</groupId>
@@ -18,7 +18,7 @@
 	<description>CRM System with Spring Boot and JSP</description>
 
 	<properties>
-		<java.version>22</java.version> <!-- Eski projende de 22 vardı, bu aynı kalabilir -->
+		<java.version>22</java.version>
 	</properties>
 
 	<dependencies>
